[gd_scene load_steps=3 format=3 uid="uid://c0p2y4v4b2x3y"]

[ext_resource type="Script" uid="uid://c8d0v0w1v2f6m" path="res://scripts/UI/collection.gd" id="1_1kq8g"]
[ext_resource type="PackedScene" uid="uid://c6j2v0v7e2k1p" path="res://Scenes/ui/collection_slot.tscn" id="2_s1ot"]
[ext_resource type="PackedScene" uid="uid://dtt1b34yncqy2" path="res://Scenes/cards/card_view.tscn" id="3_cv"]

[node name="Collection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1kq8g")
slot_scene = ExtResource("2_s1ot")
card_view_scene = ExtResource("3_cv")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.08, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 24.0
offset_top = 16.0
offset_right = -24.0
offset_bottom = 64.0
grow_horizontal = 2
alignment = 1

[node name="PrevButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(90, 36)
layout_mode = 2
text = "Prev"

[node name="TitleLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(200, 36)
layout_mode = 2
horizontal_alignment = 1
text = "Collection"

[node name="PageLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(80, 36)
layout_mode = 2
horizontal_alignment = 1
text = "PÃ¡g. 1-2"

[node name="NextButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(90, 36)
layout_mode = 2
text = "Next"

[node name="Spread" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -300.0
offset_right = 540.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LeftPage" type="ColorRect" parent="Spread"]
custom_minimum_size = Vector2(480, 560)
layout_mode = 2
color = Color(0.75, 0.75, 0.75, 1)

[node name="LeftGrid" type="GridContainer" parent="Spread/LeftPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="RightPage" type="ColorRect" parent="Spread"]
custom_minimum_size = Vector2(480, 560)
layout_mode = 2
color = Color(0.75, 0.75, 0.75, 1)

[node name="RightGrid" type="GridContainer" parent="Spread/RightPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -60.0
offset_right = 224.0
offset_bottom = -20.0
grow_vertical = 0
text = "Back"
